--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "angular-pokedex",
   "version": "0.0.0",
   "engines": {
-    "node": "v16.5.0"
+    "node": "v16.5.0",
+    "npm": "7.19.1"
   },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -24,11 +26,14 @@
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@angular/cli": "^12.1.4",
+    "@angular/compiler-cli": "~12.1.0-",
+    "typescript": "~4.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.3",
-    "@angular/cli": "~12.1.3",
+    "@angular/cli": "^12.1.4",
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
