--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-pokedex",
+            "outputPath": "dist/angular-Pokedex",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "angular-pokedex:build:production"
+              "browserTarget": "angular-Pokedex:build:production"
             },
             "development": {
-              "browserTarget": "angular-pokedex:build:development"
+              "browserTarget": "angular-Pokedex:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -79,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-pokedex:build"
+            "browserTarget": "angular-Pokedex:build"
           }
         },
         "test": {
